<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.edu.nuaa.jc.jcmicroschool.Fragments.ToolboxFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/button_results_query"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:srcCompat="@drawable/home_off"
                    android:visibility="invisible"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/button_text_results_query"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_curriculum_schedule"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:srcCompat="@drawable/home_off"
                    android:visibility="invisible"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/button_text_curriculum_schedule"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_school_bus"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:srcCompat="@drawable/home_off"
                    android:visibility="invisible"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/button_text_school_bus"
                    android:textSize="24sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/button_jcumbrella"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:srcCompat="@drawable/jcumbrella" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/button_text_jcumbrella"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_sign"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:srcCompat="@drawable/jcumbrella"
                    android:visibility="invisible"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/button_text_sign"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
